--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "motion": "^12.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.5.3",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
